--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: MobiLlama
-description: MobiLlama is an end-to-end Open Source model that is designed to cater accurate yet efficient language model for resource-constrained devices by mitigating the redundancy in transformer blocks by proposing a shared FFN design for all the transformer blocks within the Small Language Model.
+description: MobiLlama is an end-to-end Open Source model that is designed to cater accurate yet efficient language model for resource-constrained devices <br> by mitigating the redundancy in transformer blocks by proposing a shared FFN design for all the transformer blocks within the Small Language Model.
